--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "heroway-herobook-react",
+  "homepage": "https://unacon.github.io/social-herois",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,7 +35,7 @@
     "eject": "react-scripts eject",
     "server": "json-server --watch ./db.json --port 8080",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
